@@ -1,5 +1,7 @@
 2018-06-04  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/bits/postypes.h (fpos): Define special members as defaulted.
+
 	PR libstdc++/85930
 	* include/bits/shared_ptr_base.h (_Sp_make_shared_tag::_S_ti): Align
 	the static variable correctly.
